[package]
name = "loki-client"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/AusEnergyResearchLabs/loki-client-rs"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0.71"
reqwest = "0.11.16"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["macros"] }
